# goph420_w2025_lab01_stVP

./: .gitignore  README.md  pyproject.toml
examples/: driver_probability.py  driver_seismic.py  raw_plot.py  vel^2_plt.py
src/: integration.py
src/goph420_lab01/: integration.py
tests/: test_gauss_legendre.py  test_gauss_legendre_exactness.py  test_newton_cotes.py
